--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
 		"@fontsource/fira-mono": "^5.0.0",
 		"@neoconfetti/svelte": "^2.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.15.1",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"eslint": "^9.7.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"gh-pages": "^6.3.0",
 		"globals": "^15.0.0",
 		"svelte": "^5.0.0",
-		"vite": "^5.4.11"
-	},
-	"dependencies": {
-		"@sveltejs/adapter-static": "^3.0.8"
+		"vite": "^5.4.11",
+		"vitest": "^2.1.8"
 	}
 }
