--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"gh-pages": "^6.3.0",
 		"globals": "^15.0.0",
 		"svelte": "^5.0.0",
-		"vite": "^5.4.11",
+		"vite": "^6.0.0",
 		"vitest": "^2.1.8"
-	}
+	},
+	"packageManager": "pnpm@9.15.2+sha1.0ffb02f94047016ec7e088030337455b4c94bb34"
 }
