--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "eslint .",
-		"deploy": "pnpm build && pnpx gh-pages -d build -t true"
+		"deploy": "pnpm build && pnpx gh-pages -d build"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
@@ -23,7 +23,7 @@
 		"gh-pages": "^6.3.0",
 		"globals": "^15.0.0",
 		"svelte": "^5.0.0",
-		"vite": "^6.0.0",
+		"vite": "^5.0.0",
 		"vitest": "^2.1.8"
 	},
 	"packageManager": "pnpm@9.15.2+sha1.0ffb02f94047016ec7e088030337455b4c94bb34"
